# LASER

./: .gitignore  README.md  pyprojects.toml
code/: README.md  pyproject.toml  requirements.txt
code/laser/: __init__.py  pyprojects.toml  requirements.txt  setup.py
code/laser/bootstrapping/: README.md  bootstrapping_analysis_mrtrix.py  config.yaml  create_bootstrapping_list.py  create_violin_plots.py  reconst_msmt_csd.ipynb
code/laser/denoising/: README.md  compare_denoisings.py  config.yaml  denoising.py  denoising_comp.py
code/laser/reconstruction/: README.md  config.yaml  config_HR.yaml  config_LR.yaml  decoder_recon_config.yaml  master_script.py  reconstruction.py  reconstruction_HR.py  reconstruction_joint.py
code/laser/training/: README.md  linsub.py  prototype.yaml  train.py  util_classes.py
code/laser/training/models/: dims.py  mri.py
code/laser/training/models/nn/: autoencoder.py  net.py
code/laser/training/sim/: __init__.py  backend.py  dataset.py  dwi.py  epi.py  fourier.py  interp.py  isotrop_vectors.py  t2.py  util.py
code/laser/training/sim/cross_phantom/: test_signals_crossing.py
code/laser/training/sim/phantom/: comparison_mse.py  create_cross_of_D.py  simple_phantom.py
code/laser/training/trained_data/BAS/: config.yaml  mseLoss.txt  train_VAE_Latent11final.pt
code/laser/training/trained_data/DAE_BAS/: config.yaml  mseLoss.txt  (+1 more)
code/laser/utility/: README.md  combine_and_fit.py  combine_slices.py  config.yaml  convert_to_nifti.py  fit.py  fix_PF.py  get_images.ipynb  h5_to_nii.py  nii_to_h5.py  retro_us.py  util.py
(+37 files in other folders)
